--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="main-container">
         <!-- Verse Search input and button -->
@@ -22,6 +23,9 @@
             <input type="number" id="chapterInput" placeholder="Jump to..." class="search-input">
             <button id="jumpBtn" class="search-button">
                 Go
+            </button>
+            <button id="randomBtn" class="search-button">
+                Random
             </button>
         </div>
 
@@ -51,7 +55,7 @@
             <button id="prevBtn" class="nav-button">
                 Previous
             </button>
-            
+
             <span id="pageCounter" class="page-counter"></span>
 
             <button id="nextBtn" class="nav-button">
